<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="48dp"
            android:scaleType="center"
            android:src="@drawable/quiz_image" />


        <EditText
            android:id="@+id/your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardBackground"
            android:hint="@string/enterName"
            android:inputType="textCapWords"
            android:padding="24dp"
            android:layout_margin="16dp"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/cardBackground"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="16dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="24dp"
                    android:text="@string/howManyChecks"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorPrimaryDark">

                </View>

                <CheckBox
                    android:id="@+id/checkboxZero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/zero" />

                <CheckBox
                    android:id="@+id/checkboxOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/one" />

                <CheckBox
                    android:id="@+id/checkboxTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/two" />

                <CheckBox
                    android:id="@+id/checkboxFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/four" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/cardBackground"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/cardBackground"
                    android:paddingBottom="16dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="24dp"
                    android:text="@string/haveRadio"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorPrimaryDark">

                </View>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardBackground">

                    <RadioButton
                        android:id="@+id/radioYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/Yes" />

                    <RadioButton
                        android:id="@+id/radioNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/No" />

                    <RadioButton
                        android:id="@+id/radioMaybe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/Maybe" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/cardBackground"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/cardBackground"
                    android:paddingBottom="16dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="24dp"
                    android:text="@string/spellCat"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorPrimaryDark">

                </View>

                <EditText
                    android:id="@+id/catEmoji"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardBackground"
                    android:hint="@string/hintCat"
                    android:paddingBottom="24dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="24dp"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/cardBackground"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/cardBackground"
                    android:paddingBottom="16dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="24dp"
                    android:text="@string/haveEnjoyed"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorPrimaryDark">

                </View>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardBackground">

                    <RadioButton
                        android:id="@+id/radioYesTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/Yes" />

                    <RadioButton
                        android:id="@+id/radioNoTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/No" />

                    <RadioButton
                        android:id="@+id/radioMaybeTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/Maybe" />

                </RadioGroup>

            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:onClick="checkAnswer"
                android:text="@string/Score"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
